@@ -50,6 +50,13 @@ using std::malloc;
 /* APPLE LOCAL libcc_kext */
 #endif
 
+/* APPLE LOCAL begin 4832917 */
+#ifdef __i386__
+#define _keymgr_get_per_thread_data(K) (NULL)
+#define _keymgr_set_per_thread_data(K, D) (0)
+#endif
+/* APPLE LOCAL end 4832917 */
+
 extern new_handler __new_handler;
 
 void *
